--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "TesteMobile",
+  "name": "teste-mobile",
   "type": "module",
   "devDependencies": {
+    "@wdio/appium-service": "^9.14.0",
     "@wdio/cli": "^9.14.0",
     "@wdio/local-runner": "^9.14.0",
     "@wdio/mocha-framework": "^9.14.0",
